# mandelbrot

./: .gitignore  CMakeLists.txt  README.md  canvas.cpp  canvas.h  coloring.cpp  coloring.h  complex.cpp  complex.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mandelbrot.cpp  mandelbrot.h  smooth_color.cpp  smooth_color.h
